--- a/views/layouts/user/home/main_showcased_products.ejs
+++ b/views/layouts/user/home/main_showcased_products.ejs
@@ -1,5 +1,5 @@
 <div class="margin-top-5">
-  <p class="product_type">Top Deals</p>
+  <!-- <p class="product_type">Top Deals</p> -->
   <% console.log(catagories) %>
 
 <div class="row margin-top-2_5-neg">
