--- a/views/layouts/user/home/showcase.ejs
+++ b/views/layouts/user/home/showcase.ejs
@@ -1,15 +1,38 @@
-<header class="header header--1 relative container-fluid">
+<div class = "slideshow relative" >
 
-    <div class=""style="width:10%;position:absolute;left:45%;top:90%;">
-      <div class="row">
-            <!-- <img class="arrow_showcase--left arrow_showcase"  src = "./../images/circle.png"/> -->
-            <img class="bubble_showcase bubble_showcase--active" index = 1 src = "./../images/circle.png"/>
-            <!-- <img class="arrow_showcase--left arrow_showcase"  src = "./../images/circle.png"/> -->
-            <img class="bubble_showcase" index = 2 src = "./../images/circle.png"/>
-            <img class="bubble_showcase" index = 3 src = "./../images/circle.png"/>
+  <header class="header header--1 active  container-fluid">
+      <p class="header_title_1--1"> Dress In Style </p>
+      <br />
+      <p class="header_title_1--2"> We have the most stylish apperal around! </p>
 
-      <!-- <img class="arrow_showcase--right arrow_showcase" src = "./../images/circle.png"/> -->
-   </div>
-   </div>
+  </header>
+  <header class = "header header--2 inactive  container-fluid">
+    <div class="header-banner-1 relative"style="position:relative">
+    <img src = "./../images/paint.png" class="header_background--1"/>
+       <p class="header_title_2--2"> Happy Easter </p>
+    </div>
+    <p class="header_title_2--3"> Save big on Easter decorations and products! </p>
+    <div class="header-banner-2 relative">
+      <img src = "./../images/discount.png" class="header_background--2"/>
+      <p class="header_subtitle--1"> 20% Off </p>
+    </div>
+  </header>
+  </div>
+  <header class = "header header--3 inactive  container-fluid">
 
-</header>
+  </header>
+  <div class=""style="width:10%;position:absolute;left:45%;top:90%;">
+
+
+  <div class="row "style="z-index:99;position:relative;bottom:100px">
+        <!-- <img class="arrow_showcase--left arrow_showcase"  src = "./../images/circle.png"/> -->
+        <img class="bubble_showcase bubble_showcase--active" index = 1 src = "./../images/circle.png"/>
+        <!-- <img class="arrow_showcase--left arrow_showcase"  src = "./../images/circle.png"/> -->
+        <img class="bubble_showcase" index = 2 src = "./../images/circle.png"/>
+        <img class="bubble_showcase" index = 3 src = "./../images/circle.png"/>
+
+  <!-- <img class="arrow_showcase--right arrow_showcase" src = "./../images/circle.png"/> -->
+</div>
+
+</div>
+</div>
