--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,8 @@
+
+
+
+
+
 .logo_box {
   position: absolute;
   top: 20%;
@@ -296,10 +301,115 @@ a{
 .bubble_showcase{
   width:30%;opacity:.3;float:left;
 }
+.header{
+  position: absolute;
+
+}
+.slideshow{
+  padding-bottom:20%;
+}
+.header_title_1--1{
+  font-size:35px;
+  font-family: "Amazon Ember";
+  /* background:linear-gradient(to right,rgb(0,0, 0), rgb(108, 5, 33)); */
+  padding:10px;
+  font-weight:200;
+  /* box-shadow: 0px 0px 40px rgba(0,0,0,.5); */
+  border-radius:10px;
+  display: inline;
+  color:white;
+}
+.header{
+
+}
+.header_title_1--2{
+  font-size:13px;
+  clear:both;
+  font-family: "Amazon Ember";
+  /* background:linear-gradient(to right,rgb(0,0, 0), rgb(108, 5, 33)); */
+  padding:10px;
+  font-weight:200;
+  /* box-shadow: 0px 0px 40px rgba(0,0,0,.5); */
+  border-radius:10px;
+  display: inline;
+  color:white;
+}
+.active{
+  visibility: visible;
+}
+.header_background--1{
+  position: absolute;
+  width:35%;
+  top:0%;
+  left:0%;
+
+}
+.relative{
+  position: relative;
+}
+.header_title_2--2{
+
+}
+.header_background--2{
+  position:absolute;
+  top:0%;
+  right:0%;
+  width:20%;
+}
+.header_banner-2{
+  height:100%;
+}
+.header_subtitle--1{
+  position: absolute;
+  top:75px;
+  color:white;
+  font-weight:300;
+  font-family:"Amazon Ember";
+  right:0%;
+  text-align: center;
+  width:20%;
+  font-size:35px;
+}
+.header_title_2--3{
+  font-size:20px;
+  font-family:"Special Elite";
+  font-weight:300;
+  margin-top:10%;
+  position: absolute;
+}
+.header_banner--1{
+  position: relative;
+}
+.header_title_2--2{
+  color:white;
+  text-align:center;
+  position: absolute;
+  z-index:19;
+  left:-2.5%;
+  top:20px;
+  width:40%;
+  font-size:45px;
+  font-family:"Special Elite";
+
+  /* font-family:"Dancing Script"; */
+}
+
+.active * {
+  visibility: visible;
+};
+.inactive * {
+  visibility: hidden;
+}
+.inactive{
+  visibility: hidden;
+}
 .header--1{
   animation:.5s fadein 1 ease-in;
   background-position: center;
-  background-image:  url("./../images/shop242.png");
+  background-image:  linear-gradient(to top, rgba(255,255,255,1),rgba(255,255,255,0), rgba(255,255,255,0), rgba(0,0,0,.5)), url("./../images/background-3.png");
+}
+.relative {
+  position: relative;
 }
 .bubble_showcase:hover{
   opacity:.7;
@@ -313,7 +423,7 @@ a{
   background-position: center;
   margin-top:-2.5%;
   animation:.5s fadein 1 ease-in;
-  background-image:  url("./../images/shop122.png");
+  background-image:  linear-gradient(to top, rgba(255,255,255,1),rgba(255,255,255,0), rgba(255,255,255,0), rgba(0,0,0,.5)),url("./../images/background-2.png");
 }
 .product_type{
   font-family: "Amazon Ember";
@@ -348,13 +458,13 @@ a{
 
   animation:.5s fadein 1 ease-in;
   background-position: center;
-  background-image: url("./../images/shop90.png");
+  background-image: url("./../images/background-4.png");
 }
 .header--4{
   background-position: center;
 
   animation:.5s fadein 1 ease-in;
-  background-image:  url("./../images/shop11.png");
+  background-image:  url("./../images/background-3.png");
 }
 .btn {
   border-radius: 100px;
@@ -432,6 +542,7 @@ a{
     transform: translateX(0);
   }
 }
+
 @keyframes move_in_top {
   0% {
     opacity: 0;
