--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -13,6 +13,7 @@
     <link href ='./../css/detail.css' rel="stylesheet"/>
     <link href ='./../css/review.css' rel="stylesheet"/>
     <link href ='./../css/cart.css' rel="stylesheet"/>
+    <link href ='./../css/search.css' rel="stylesheet"/>
     <link href ='./../css/catagory_products.css' rel="stylesheet"/>
 
 
