--- a/views/layouts/user/home/fashion_products.ejs
+++ b/views/layouts/user/home/fashion_products.ejs
@@ -1,29 +1,39 @@
 
 <div class="catagory_products container-fluid">
 
-
 <% for(var k = 0; k < catagories.length; k++) { %>
-<div class="catagory_row width-100">
-  <% var c = "Catagory"; %>
+  <% var starting_counter = 0%>
+  <% var c = "Catagory"  %>
   <% if(catagories[k].catagory){ %>
     <% c = catagories[k].catagory %>
+    <% starting_counter = catagories[k].counter %>
+    <% console.log(starting_counter) %>
    <%}%>
+<div class="catagory_row width-100" id = <%= c %>>
+
     <p class="catagory_title"> <%= c %> </p>
 
-  <div class="row">
+  <div class="row items_row relative">
+    <div class="catagory_arrow catagory_arrow--left" catagory = <%= c %> counter = -1  >
+      <img src = "./../images/arrow.png" />
+    </div>
+    <div class="catagory_arrow catagory_arrow--right"  catagory = <%= c %> counter =1>
+      <img src = "./../images/arrow.png" />
+    </div>
+    <div class="catagory_populate" id = <%= `_${c}` %>>
     <% for(var i = 0; i <= 3; i++) { %>
+    <% var i_ = i + starting_counter %>
     <div class="col-3 no-margin-left">
-    <div class="product_box fix_x width-100">
+    <div class= "product_box fix_x width-100" catagory = <%= c %> it = <%= i_ %> >
       <% var name = "Name Will Be Placed Here" %>
       <% var img = "./images/catagory_3.png" %>
       <% var price = "[N/A]" %>
       <% var description = "" %>
-
-      <% if(catagories[k].items[i]){ %>
-        <% name = catagories[k].items[i].title.substring(0, 30) + "..."; %>
-        <% img = "./"+catagories[k].items[i].thumbnail %>
-        <% price = catagories[k].items[i].price %>
-        <% description = catagories[k].items[i].description.substring(0, 100) + "...";  %>
+      <% if(catagories[k].items[i_]){ %>
+        <% name = catagories[k].items[i_].title.substring(0, 30) + "..."; %>
+        <% img = "./"+catagories[k].items[i_].thumbnail %>
+        <% price = catagories[k].items[i_].price %>
+        <% description = catagories[k].items[i_].description.substring(0, 100) + "...";  %>
       <%}%>
       <p class="catagory_name"><%= name %></p>
 
@@ -32,16 +42,16 @@
       <div class="product_text_box">
         <p class="product_description_display"><%=description %></p>
         <p class="catagory_price_new ">$ <%= price %></p>
-        <% if(catagories[k].items[i]){ %>
-            <a href = <%="/product/"+catagories[k].items[i]._id %>><p class="product_detail fix_y">See Details</p></a>
-        <%}%>
+
+        <a href = <%="/product/"+catagories[k].items[i_]._id %>><p class="product_detail fix_y">See Details</p></a>
+
       </div>
 
     </div>
 
   </div>
   <% } %>
-
+    </div>
  </div>
 
 </div>
