--- a/views/layouts/user/home/login_showcase_products.ejs
+++ b/views/layouts/user/home/login_showcase_products.ejs
@@ -3,7 +3,7 @@
   <% for(var i =0; i <2; i++){%>
 
     <div class="col-1-of-3">
-        <div class="product_box">
+        <div class="product_box shadow_border">
             <p class="product_name">Top Deals</p>
             <img class="product_image"src = "./images/catagory_3.png"/>
             <div class="product_text_box">
