--- a/views/user/header.ejs
+++ b/views/user/header.ejs
@@ -1,12 +1,12 @@
 <div class="navbar">
 
-    <div class="row return_row" >
+    <div class="row return_row no_padding" >
 
-      <div class="col-1 no-padding ">
+      <div class="col-1 no_margin no-padding ">
       <a href = "/">    <img src = "./images/new_logo.png" class=" margin-top-7_5 logo" alt = "logo" class="logo"/> </a>
       </div>
 
-      <div class="col-2  no-padding margin-top-2_5">
+      <div class="col-2 no_margin  no-padding margin-top-2_5">
           <p class="return_to margin-left-5"style="padding-left:10%"><strong>Delivering to</strong> <br /> Scottdale Arizona 852....<br /> <span> Update Location </span></p>
       </div>
 
@@ -17,16 +17,18 @@
                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                   </svg>
                 </span>
-            <input class="form-control no-border "style="float:left;border-radius:0px;width:90%;height:45px" placeholder = "Search for Item">
+
+              <input class="form-control no-border search_all "   placeholder = "Search for Item">
+        
           </div>
       </div>
       <% console.log(isAuthenticated) %>
       <% if (! isAuthenticated){ %>
-      <div class="col-2  no-padding margin-top-2_5">
+      <div class="col-2 no_margin no-padding margin-top-2_5">
           <p class="return_to "style="padding-left:10%">Hello! Sign in to <br /><span style="font-weight:bold"> <a href="/login">Customer</a> |  Admin </span></p>
       </div>
       <% }else{ %>
-        <div class="col-2  no-padding margin-top-2_5">
+        <div class="col-2 no_margin no-padding margin-top-2_5">
             <p class="return_to"style="font-size:16px;padding-left:10%">Welcome Back!<br />
               <a href = "/logout" >
                 <span style="text-align:center;font-weight:bold">
@@ -62,4 +64,11 @@
 
    </div>
 
+
 </div>
+<div class = "sub_banner">
+
+    <% for(var i = 0; i < catagories.length; i++){ %>
+        <a href = "#"><p class="sub_catagory"><%= catagories[i].catagory %> </p></a>
+    <% }%>
+ </div>
