--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -4,7 +4,7 @@
   <%- include("./header.ejs") %>
 
   <%- include("./../layouts/user/home/showcase.ejs") %>
-
+  <%- include("./../layouts/user/home/search_overlay.ejs") %>
   <div class="relative">
     <%- include("./../layouts/user/home/main_showcased_products.ejs") %>
   </div>
@@ -16,6 +16,10 @@
 
 
 </main>
+
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src = "./js/catagory_toggle.js" ></script>
+<script src = "./js/search_results.js" ></script>
 
 <script src = "./js/slideshow.js" ></script>
 <script src = "./js/long_banner.js" ></script>
